# Smart-Conveyor-Monitoring-Embedded-System

./: CMakeLists.txt  Complete Circuit.pdsprj  Complete Circuit.pdsprj.HABIBA.habib.workspace  Complete Circuit.pdsprj.HISHAM20.H20.workspace  TimeCapture.pdsprj  adc.pdsprj  main.c
Adc/: Adc.c  Adc.h
EXTI/: EXTI.c  EXTI_Private.h
Gpio/: Gpio.c  Gpio.h  Gpio_Private.h
Hisham_LCD/: Complete Circuit.pdsprj  lcd.pdsprj  lcd.pdsprj.HISHAM20.H20.workspace  lcd.pdsprj.MAYA-MOHAMED.MO.workspace
Hisham_LCD/Adc/: Adc.c
Hisham_LCD/EXTI/: EXTI.h
Hisham_LCD/LCD/: lcd.c
Hisham_LCD/PWM/: pwm.c  pwm.h
Hisham_LCD/Project Backups/: lcd [20250603, 14-42-58].pdsprj  lcd [20250603, 15-10-55].pdsprj  lcd [20250603, 16-54-47].pdsprj  lcd [20250604, 09-40-16].pdsprj  lcd [20250604, 10-00-54].pdsprj  lcd [20250604, 10-37-58].pdsprj  lcd [20250604, 10-37-59].pdsprj  lcd [20250604, 14-08-03].pdsprj  lcd [20250604, 14-08-26].pdsprj  lcd [Autosaved].pdsprj
Hisham_LCD/src/: main.c
LCD/: lcd.c  lcd.h
PWM/: pwm.c  pwm.h
Project Backups/: Complete Circuit [20250606, 17-23-01].pdsprj  Complete Circuit [Autosaved].pdsprj
TimeCapture/: TimeCapture.c  TimeCapture.h
TimeCapture main and test/: TimeCapture.pdsprj.HISHAM20.H20.workspace
TimeCapture main and test/src/: main.c
src/: main.c
